[package]
name = "minesweeper"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/StudentWeis/minesweeper"

[dependencies]
bevy = "0.17"
rand = "0.9"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
